--- a/src/widgets/profileSettings/devices/ui/CardsDevice/CardsDevice.module.scss
+++ b/src/widgets/profileSettings/devices/ui/CardsDevice/CardsDevice.module.scss
@@ -21,7 +21,7 @@
     height: 3.6rem;
 
     @media (max-width: 768px) {
-      width: 6.5rem;
+      width: 10.5rem;
     }
   }
 
@@ -48,7 +48,7 @@
     gap: 5px;
     align-items: center;
     justify-content: flex-end;
-    margin-left: 24rem;
+    margin-left: 45rem;
     font-size: 14px;
     font-weight: 500;
     font-style: normal;
@@ -76,6 +76,9 @@
     &:disabled {
       color: var(--color-dark-100);
       stroke: var(--color-dark-100);
+    }
+    @media (max-width: 768px) {
+      margin-left: auto;
     }
   }
 }
