--- a/src/widgets/profileSettings/devices/ui/CardsDevice/CardsDevice.module.scss
+++ b/src/widgets/profileSettings/devices/ui/CardsDevice/CardsDevice.module.scss
@@ -55,7 +55,7 @@
     line-height: 24px;
     color: #fff;
     text-decoration: none;
-
+    padding-right: 2rem;
     &:active {
       color: var(--color-accent-500);
       fill: var(--color-accent-500);
