feat/INCT-236 add My Payments

--- a/src/widgets/profileSettings/my-payments/MyPayments.module.scss
+++ b/src/widgets/profileSettings/my-payments/MyPayments.module.scss
@@ -1,3 +1,12 @@
-.styles {
-  display: flex;
+.table {
+  width: 100%;
+  border: 1px solid var(--color-dark-500);
+  th {
+    background-color: var(--color-dark-500);
+  }
+  th, td {
+    text-align: left;
+    border-bottom: 1px solid var(--color-dark-500);
+    padding: 20px 30px;
+  }
 }
