--- a/src/shared/components/pagination/pagination.module.scss
+++ b/src/shared/components/pagination/pagination.module.scss
@@ -73,6 +73,7 @@
   all: unset;
 
   display: flex;
+  align-items: center;
   gap: 5px;
 
   margin-top: 15px;
@@ -82,6 +83,7 @@
 .selectWrapper {
   display: flex;
   gap: 10px;
+  white-space: nowrap;
   align-items: center;
   justify-content: center;
 }
