--- a/src/widgets/superAdmin/userList/UserList.module.scss
+++ b/src/widgets/superAdmin/userList/UserList.module.scss
@@ -18,6 +18,7 @@
   width: 100%;
   border: 1px solid var(--color-dark-500);
   th {
+    width: 250px;
     background-color: var(--color-dark-500);
   }
   th, td {
@@ -25,7 +26,16 @@
     border-bottom: 1px solid var(--color-dark-500);
     padding: 20px 30px;
   }
+  .date {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    cursor: pointer;
+    width: 450px;
+  }
 }
+
+
 
 .ellipsis {
   cursor: pointer;
