--- a/src/widgets/profileSettings/devices/ui/CardsDevice/CardsDevice.module.scss
+++ b/src/widgets/profileSettings/devices/ui/CardsDevice/CardsDevice.module.scss
@@ -1,45 +1,43 @@
 .cardsDevice {
-  width: 100%;
   display: flex;
   align-items: center;
+
+  width: 100%;
   height: 7.5rem;
-  background: var(--color-dark-500);
-  border: 1px solid var(--color-dark-300);
   margin-bottom: 0.6rem;
 
-  @media (max-width: 768px) {
-    height: auto;
-    width: 24rem;
-    padding: 1rem;
-  }
+  background: var(--color-dark-500);
+  border: 1px solid var(--color-dark-300);
 
   .icon {
     display: flex;
-    margin-left: 0.8rem;
-    padding: 0.1rem;
+
     width: 3.6rem;
     height: 3.6rem;
+    margin-left: 0.8rem;
+    padding: 0.1rem;
 
-    @media (max-width: 768px) {
+    @media (width <= 768px) {
       width: 10.5rem;
     }
   }
 
   .details {
-    width: 20rem;
-    padding: 0.5rem;
-    height: 5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 0.2rem;
 
-    @media (max-width: 768px) {
-      height: auto;
-    }
+    width: 20rem;
+    height: 5rem;
+    margin-left: 0.2rem;
+    padding: 0.5rem;
 
     .name {
       margin-bottom: 0.4rem;
+    }
+
+    @media (width <= 768px) {
+      height: auto;
     }
   }
 
@@ -48,14 +46,17 @@
     gap: 5px;
     align-items: center;
     justify-content: flex-end;
+
     margin-left: 45rem;
+    padding-right: 2rem;
+
     font-size: 14px;
     font-weight: 500;
     font-style: normal;
     line-height: 24px;
     color: #fff;
     text-decoration: none;
-    padding-right: 2rem;
+
     &:active {
       color: var(--color-accent-500);
       fill: var(--color-accent-500);
@@ -77,8 +78,15 @@
       color: var(--color-dark-100);
       stroke: var(--color-dark-100);
     }
-    @media (max-width: 768px) {
+
+    @media (width <= 768px) {
       margin-left: auto;
     }
+  }
+
+  @media (width <= 768px) {
+    width: 24rem;
+    height: auto;
+    padding: 1rem;
   }
 }
