--- a/src/widgets/profileSettings/my-payments/MyPayments.module.scss
+++ b/src/widgets/profileSettings/my-payments/MyPayments.module.scss
@@ -1,12 +1,15 @@
 .table {
   width: 100%;
   border: 1px solid var(--color-dark-500);
+
   th {
     background-color: var(--color-dark-500);
   }
-  th, td {
+
+  th,
+  td {
+    padding: 20px 30px;
     text-align: left;
     border-bottom: 1px solid var(--color-dark-500);
-    padding: 20px 30px;
   }
 }
