--- a/src/shared/assets/_mixins.scss
+++ b/src/shared/assets/_mixins.scss
@@ -10,3 +10,20 @@
   background-color: var(--color-dark-500);
   border-radius: 2px;
 }
+
+@mixin table_styles() {
+  width: 100%;
+  border: 1px solid var(--color-dark-500);
+
+  th {
+    background-color: var(--color-dark-500);
+  }
+
+  th,
+  td {
+    padding: 20px 30px;
+    text-align: left;
+    border-bottom: 1px solid var(--color-dark-500);
+  }
+}
+
