--- a/src/widgets/profileSettings/my-payments/MyPayments.module.scss
+++ b/src/widgets/profileSettings/my-payments/MyPayments.module.scss
@@ -1,15 +1,25 @@
+@use "src/shared/assets/mixins";
+
+//.table {
+//  width: 100%;
+//  border: 1px solid var(--color-dark-500);
+//
+//  th {
+//    background-color: var(--color-dark-500);
+//  }
+//
+//  th,
+//  td {
+//    padding: 20px 30px;
+//    text-align: left;
+//    border-bottom: 1px solid var(--color-dark-500);
+//  }
+//}
+
+
+
+
 .table {
-  width: 100%;
-  border: 1px solid var(--color-dark-500);
-
-  th {
-    background-color: var(--color-dark-500);
-  }
-
-  th,
-  td {
-    padding: 20px 30px;
-    text-align: left;
-    border-bottom: 1px solid var(--color-dark-500);
-  }
+  @include mixins.table_styles
 }
+
