--- a/src/shared/components/select/select.module.scss
+++ b/src/shared/components/select/select.module.scss
@@ -23,7 +23,7 @@
   margin-bottom: -4px;
   padding: 5px;
 
-  text-transform: capitalize;
+  //text-transform: capitalize;
 
   background: none;
   border: 1px solid var(--color-dark-100);
@@ -39,6 +39,7 @@
 }
 
 .value {
+
   margin-right: 6px;
   margin-left: 6px;
 }
@@ -63,7 +64,7 @@
   width: var(--radix-select-trigger-width);
   max-height: var(--radix-select-content-available-height);
 
-  text-transform: capitalize;
+  //text-transform: capitalize;
 
   background: black;
   border: 1px solid var(--dark-300, #4c4c4c);
