--- a/src/widgets/superAdmin/userList/moreInformation/table-info/payments/Payments.module.scss
+++ b/src/widgets/superAdmin/userList/moreInformation/table-info/payments/Payments.module.scss
@@ -1,5 +1,5 @@
-@use "src/shared/assets/mixins";
+@use 'src/shared/assets/mixins';
 
 .table {
-  @include mixins.table_styles
+  @include mixins.table_styles;
 }
