INCT-274 add Avatar of User

--- a/src/widgets/superAdmin/paymentsList/PaymentsList.module.scss
+++ b/src/widgets/superAdmin/paymentsList/PaymentsList.module.scss
@@ -13,10 +13,14 @@
     align-items: center;
     width: 100%
   }
+
   .tableContent {
     display: flex;
 
     td {
+      display: flex;
+      align-items: center;
+      gap: 7px;
       width: 100%;
     }
   }
