--- a/src/widgets/superAdmin/postsList/post/Post.module.scss
+++ b/src/widgets/superAdmin/postsList/post/Post.module.scss
@@ -1,40 +1,62 @@
-.table {
-  width: 100%;
+.container {
+  flex-shrink: 0;
+  width: 290px;
+  height: 440px;
+
+  .wrapper {
+    display: flex;
+    word-wrap: break-word;
+    transition: margin-top 0.3s ease-in-out;
+  }
+
+  .wrapper.expanded {
+    margin-top: -240px;
+  }
 }
 
-.cell {
+.item {
+  cursor: pointer;
   position: relative;
-  width: 25%;
-  height: 450px;
-  vertical-align: top;
-}
-
-.postContainer {
-  position: relative;
   width: 100%;
+  height: 240px;
 }
 
-.descriptionContainer {
-  position: absolute;
-  padding: 0 3px;
-  width: 100%;
-  overflow: hidden;
-  transition: margin-top 0.3s ease-in-out;
-}
-
-.descriptionContainer.expanded {
-  padding: 0 3px;
-  height: 100%;
-  margin-top: -240px;
+.sticky {
   z-index: 1;
-  background-color: black;
+  padding: 0 7px;
+  align-self: flex-end;
+
+  width: 100%;
+  min-height: 150px;
+
+  background-color: var(--color-dark-700);
+}
+
+.timeInfo {
+  color: var(--light-900, #8d9094);
 }
 
 .description {
-  padding: 10px 10px 0 0;
-  max-height: 60px;
-}
+  .text {
+    width: 360px;
 
-.date {
-  padding: 5px 0 5px 3px;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 24px;
+    color: var(--light-100, #fff);
+  }
+  margin-top: 5px;
+
+  .toggleButton {
+    cursor: pointer;
+    margin-left: 7px;
+
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 24px;
+    color: var(--primary-500, #397df6);
+    text-decoration-line: underline;
+  }
 }
