--- a/src/widgets/postViewModal/UI/PostCommentsView.module.scss
+++ b/src/widgets/postViewModal/UI/PostCommentsView.module.scss
@@ -2,13 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  width: 30.5rem;
+  border-bottom-right-radius: 1px;
   padding: 12px 24px;
-
   border-bottom: 1px solid var(--color-dark-100);
 }
 
 .headerOnMiddle {
+
   display: block;
 }
 
@@ -29,10 +30,15 @@
 }
 
 .scrollContent {
+
   width: 100%;
   background-color: var(--color-dark-300);
 }
-
+.footer{
+  width: 30.5rem;
+  border-top-right-radius: 1px;
+  background-color: var(--color-dark-300);
+}
 @media (width <= 576px) {
   .main {
     height: 190px;
@@ -73,6 +79,7 @@
 }
 
 .button {
+
   margin: 0;
   padding: 0;
   color: var(--color-light-100);
@@ -93,6 +100,7 @@
 }
 
 .InputField{
+
   background-color: transparent;
   border: none;
   outline: none;
@@ -137,10 +145,12 @@ font-size: 0.8rem;
 }
 
 .like {
+  cursor: pointer;
   padding: 24px 24px 0 0;
 }
 
 .share {
+  width: 30.5rem;
   padding: 12px 24px;
   border-top: 1px solid var(--color-dark-100);
   border-bottom: 1px solid var(--color-dark-100);
@@ -195,6 +205,7 @@ font-size: 0.8rem;
 }
 
 .addComment {
+  width: 30.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
