--- a/src/pages/home/ui/postsHome.module.scss
+++ b/src/pages/home/ui/postsHome.module.scss
@@ -44,7 +44,7 @@
 
 .footer {
   width: 30.5rem;
-  padding-top: 4rem;
+  padding-top: 13rem;
 }
 
 @media (width <= 576px) {
@@ -93,9 +93,8 @@
   justify-content: flex-start;
 }
 
-.imageContainer {
-  width: 100%;
-  height: 100%;
+.dots{
+margin-left: 10rem;
 }
 
 .button {
@@ -121,15 +120,31 @@
 }
 
 .allComment {
+  cursor: pointer;
   padding-left: 1.5rem;
   color: var(--color-light-900);
 }
 
 .InputField {
+  height: 1rem;
   word-wrap: break-word;
   background-color: transparent;
   border: none;
   outline: none;
+}
+.line {
+  position: relative;
+}
+
+.line::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 1.4rem;
+  width: 90%;
+  height: 2px;
+  border-radius: 4px;
+  background-color: var(--color-dark-100) ;
 }
 
 .answer {
