--- a/src/pages/home/ui/postsHome.module.scss
+++ b/src/pages/home/ui/postsHome.module.scss
@@ -28,7 +28,7 @@
 }
 
 .img {
-  min-width: 30.2rem;
+  min-width: 23.2rem;
   min-height: 27.8rem;
 }
 
@@ -108,6 +108,11 @@
   margin: 0;
   padding: 0;
   color: var(--color-light-100);
+}
+
+.imageContainer {
+  width: 28.2rem;
+  margin-left: 1rem;
 }
 
 .post {
