--- a/src/widgets/postViewModal/UI/PostComments/PostCommentsView.module.scss
+++ b/src/widgets/postViewModal/UI/PostComments/PostCommentsView.module.scss
@@ -124,8 +124,9 @@
 }
 
 .updatedAt {
+  cursor: pointer;
   display: initial;
-  padding-left: 5px;
+  padding-left: 1px;
   color: var(--color-light-900);
 }
 
