INCT-271 fix: conflict with dev 270

--- a/src/pages/home/ui/postsHome.module.scss
+++ b/src/pages/home/ui/postsHome.module.scss
@@ -240,6 +240,10 @@
   padding: 0 24px 36px 0;
 }
 
+.likePost {
+  cursor: pointer;
+}
+
 .descriptionPosts {
   display: flex;
   column-gap: 5px;
