INCT-279 fix: black cube and photo

--- a/src/widgets/postViewModal/UI/PostComments/PostCommentsView.module.scss
+++ b/src/widgets/postViewModal/UI/PostComments/PostCommentsView.module.scss
@@ -35,7 +35,7 @@
 
 .scrollContent {
   width: 100%;
-  background-color: var(--color-dark-300);
+  background-color: var(--color-dark-300)!important;
 }
 
 .footer {
